--- a/jeupoisson/index.css
+++ b/jeupoisson/index.css
@@ -1,3 +1,7 @@
+* {
+    font-family: "Poppins", sans-serif;
+}
+
 div {
     position: absolute;
 }
@@ -66,7 +70,9 @@ html, body {
     right:0;
     bottom:0;
 }
+
 .modal-inner{
+    z-index: 4001;
     background-color: aquamarine;
     border-radius: 5px;
     box-shadow: 0 1px 4px rgba(0,0,0,0.3);
