--- a/jeupoisson/index.css
+++ b/jeupoisson/index.css
@@ -14,7 +14,7 @@ html, body {
     overflow: hidden;
 }
 body{
-    background-image: url("./background.png");
+    background-image: url("./dibujos/background.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -53,7 +53,10 @@ body{
 }
 
 .dechet {
-    background: green;
+    /*background: green;*/
+    background-image: url("./dibujos/dechet1.PNG");
+    background-size: contain;
+    background-repeat: no-repeat;
     z-index: 4000;
     width: 80px;
     height: 120px;
