--- a/jeupoisson/index.css
+++ b/jeupoisson/index.css
@@ -17,8 +17,13 @@ html, body {
 #poisson {
     width: 100px;
     height: 60px;
-    background: grey;
     z-index: 4000;
+    background-image: url("./poissong.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    transition: transform 0.3s;
+    visibility: visible;
+    opacity: 1.0;
 }
 
 #ocean {
@@ -97,4 +102,12 @@ html, body {
     box-shadow: 0 1px 4px rgba(0,0,0,0.3);
     padding: 15px 25px;
     width: 380px;
+}
+
+.poisson-looking-down {
+    transform: rotate(25deg);
+}
+
+.poisson-looking-up {
+    transform: rotate(-25deg);
 }
