--- a/jeuPoisson/index.css
+++ b/jeuPoisson/index.css
@@ -102,7 +102,7 @@ body{
     bottom:0;
 }
 .modal-inner-failure{
-    background-color: red;
+    background-color: rgb(232, 89, 89);
     border-radius: 5px;
     box-shadow: 0 1px 4px rgba(0,0,0,0.3);
     padding: 15px 25px;
