--- a/index.css
+++ b/index.css
@@ -112,10 +112,15 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     height: 100%;
 }
 
 .gameIcon {
     max-height: 60%;
     max-width: 160px;
+
+    padding-bottom: 20px;
+    display: block;
+    border-bottom: 1px solid #3dae91;/* todo: faire une barre plus fine */
 }
