--- a/jeuNettoyer/clic.css
+++ b/jeuNettoyer/clic.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     overflow: hidden;
-    background-image: url("./fond.PNG") ;
+    background-image: url("./fond.jpg") ;
     background-repeat: no-repeat;
     background-size:100%
 }
