--- a/jeuPendu/pendu.css
+++ b/jeuPendu/pendu.css
@@ -1,16 +1,21 @@
+* {
+    font-family: "Poppins", sans-serif;
+}
+
 html, body {
-    width:100vw; 
-    background-color:#f1cdc0; 
+    width:100vw;
     display:grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows:10vh 3vh 52vh 50vh ;
-    grid-row-gap: 0px;
+    grid-row-gap: 0;
     grid-column-gap: 100px;
-    margin-top: 0px;
+    margin: 0;
     max-height: 100%;
-    scroll-behavior: none;
     margin : auto;
+}
 
+body {
+    background-image: linear-gradient(to top left, #f1cdc0, #d4f1c0);
 }
 
 
@@ -29,22 +34,22 @@ button{
     justify-content: center;
     line-height: 1.5;
     overflow: hidden;
-    padding: auto;
     text-decoration: none;
     text-overflow: ellipsis;
     transition: all .14s ease-out;
     white-space: nowrap;
     width: 60px;
     height: 30px;
-    font-family:Palatino, URW Palladio L, sans-serif;
     padding: 2px;
 }
 
 
 button:hover {
-    box-shadow: 4px 4px 0 #09271f;
+    box-shadow: 4px 4px 4px #09271f;
     transform: translate(-4px,-4px);
     background-color: #457B9D;
+    color: white;
+    color: white;
 }
 
 button:focus-visible{
@@ -52,14 +57,13 @@ button:focus-visible{
 }
 
 .notDisplay{
-    display: none;
+    opacity: 0;
 }
 
 h1{
     padding:auto;
     margin : auto;
     width: 500px;
-    font-family:  Impact, fantasy;
     color: #3dae91;
     grid-row: 1;
     grid-column: 1/3;
@@ -77,13 +81,17 @@ h1{
     font-size: 100px;
 }
 
-#jouer{
-    grid-column: 1/3;
-    grid-row: 2;
-    margin-right:auto;
-    margin-left: auto;
-    padding: auto;
-    
+#jouer {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 15%;
+    margin: auto;
+    padding: 20px;
+    display: block;
+    color: white;
+    width: auto;
+    height: auto;
 }
 
 #img{
@@ -95,13 +103,14 @@ h1{
     grid-column: 1;
     grid-row: 3;
     margin:auto;
+    transition: opacity 2s;
 }
 
 #droite{
     grid-column: 2;
     grid-row: 3/5;
     margin:auto;
-    
+    transition: opacity 2s;
 }
 
 #centre{
@@ -110,6 +119,7 @@ h1{
     grid-row: 3;
     grid-template-rows: 1fr 1fr;
     margin:auto;
+    transition: opacity 2s;
 }
 
 #motad{
@@ -212,7 +222,7 @@ h1{
 .lettre:hover {
     box-shadow: 4px 4px 4px rgb(0, 0, 17);
     transform: translate(-4px,-4px);
-    background-color: #09271f;
+    background-color: #1b7a61;
 }
 
 .lettre:focus-visible{
@@ -220,7 +230,7 @@ h1{
 }
 
 .redL:hover{
-    box-shadow: 4px 4px 4px rgba(249, 88, 56, 0.63) !important;
+    box-shadow: 4px 4px 2px rgba(249, 88, 56, 0.63) !important;
     transform: translate(-4px,-4px);
     background-color: #457B9D;
 }
@@ -285,7 +295,7 @@ h1{
     display: none;
     box-shadow: 4px 4px 4px rgb(10, 1, 53, 0.2);
     margin: auto;
-    color: rgb(19, 33, 54);
+    color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     display: none;
