--- a/jeuMemo/style.css
+++ b/jeuMemo/style.css
@@ -1,5 +1,8 @@
+* {
+    font-family: "Poppins", sans-serif;
+}
+
 h1 {
-    font-family: Impact, fantasy;
     font-size: xxx-large;
     color: #3dae91;
     margin-left: auto;
@@ -26,7 +29,6 @@ body {
 }
 div#memo-start {
     padding: 10px 36px;
-    font-family: Palatino, URW Palladio L, sans-serif;
     font-size: larger;
 }
 p.startText {
@@ -34,7 +36,6 @@ p.startText {
 }
 
 #memoTitle {
-    font-family: Impact, fantasy;
     font-size: xx-large;
     color: #3dae91;
     margin-left: 36%;
@@ -56,7 +57,6 @@ button.buttonMemo {
     width: 107px;
     background-color: #f1cdc0;
     font-size: xx-large;
-    font-family: Impact, fantasy;
     color: #3dae91;
     border: 5px solid #114c3d;
     border-radius: 10px;
@@ -73,7 +73,6 @@ div#boutonPlay {
     width: 107px;
     background-color: #f1cdc0;
     font-size: xx-large;
-    font-family: Impact, fantasy;
     color: #3dae91;
     border: 5px solid #114c3d;
     border-radius: 10px;
@@ -87,7 +86,6 @@ p#triesMemo {
     margin-right: auto;
     margin-left: auto;
     padding: 10px 36px;
-    font-family: Palatino, URW Palladio L, sans-serif;
     font-size: larger;
 }
 .memoimg {
@@ -132,14 +130,9 @@ div#memo-right {
 }
   
 #titre-shop {
-    font-family: Impact, fantasy;
     margin: 8%;
     color: #3dae91;
     font-size: xxx-large;
-}
-
-p {
-    font-family: Palatino, URW Palladio L, sans-serif;
 }
   
 .modal-close {
