--- a/jeuPendu/pendu.css
+++ b/jeuPendu/pendu.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 body {
-    background-image: linear-gradient(to top left, #f1cdc0, #d4f1c0);
+    background-image: linear-gradient(to top left, #d9a796, #bde6a1);
 }
 
 
