--- a/jeuMemo/style.css
+++ b/jeuMemo/style.css
@@ -31,7 +31,7 @@ html {
     height: 100%;
     padding: 0;
     margin: 0;
-    background-image: linear-gradient(to top left, #f1cdc0, #d4f1c0);
+    background-image: linear-gradient(to top left, #d9a796, #bde6a1);
     overflow: hidden;
 }
 
