--- a/index.css
+++ b/index.css
@@ -7,6 +7,12 @@ html {
     height: 100%;
 }
 
+header>p {
+    text-align: center;
+    color: #3dae91;
+    font-size: 18px;
+}
+
 body {
     width: 100%;
     height: 100%;
@@ -34,9 +40,10 @@ h1{
     grid-row: 2;
     justify-content: space-evenly;
     align-items: center;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(3, 33%);
     grid-template-rows: repeat(2, 50%);
-    margin-bottom: 100px;
+    width: 60%;
+    margin: 0 auto 100px auto;
 }
 
 #grilleJeux>div:hover {
@@ -55,7 +62,7 @@ h1{
     /*font-family: Palatino, URW Palladio L, sans-serif;*/
     color: #3dae91;
     text-align: center;
-    grid-column: 2;
+    grid-column: 3;
     grid-row: 1;
 }
 
@@ -63,7 +70,7 @@ h1{
     /*font-family: Palatino, URW Palladio L, sans-serif;*/
     color: #3dae91;
     text-align: center;
-    grid-column: 1;
+    grid-column: 2;
     grid-row: 2;
 }
 
@@ -100,10 +107,11 @@ h1{
     border: solid #3dae91;
     position: absolute;
     /*font-family: Palatino, URW Palladio L, sans-serif;*/
-    color: #3dae91;
+    color: white;
     width: 300px;
     border-radius: 7px;
-    padding: 5px;
+    background: #3dae91;
+    padding: 10px;
     bottom: 5%;
     left :10vw;
 }
@@ -114,6 +122,20 @@ h1{
     align-items: center;
     justify-content: space-evenly;
     height: 100%;
+    position: relative;
+}
+
+.gameDiv:hover h4 {
+    color: white;
+    z-index: 800;
+}
+
+.gameDiv:hover .gameIcon {
+    border-bottom: 0px;
+}
+
+.gameDiv:hover .openingHoverDiv {
+    height: 100%;
 }
 
 .gameIcon {
@@ -122,5 +144,20 @@ h1{
 
     padding-bottom: 20px;
     display: block;
+    z-index: 900;
     border-bottom: 1px solid #3dae91;/* todo: faire une barre plus fine */
+}
+
+.openingHoverDiv {
+    width: 60%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #299665;
+    bottom: 0;
+    height: 0%;
+    z-index: 700;
+    transition: height 0.2s;
 }
